collects/tests/typed-scheme/fail/pr11560.rkt
#lang typed/racket/base
(ann (ann 5 Real) Integer)
